--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="message_download_complete">Download complete</string>
     <string name="related_posts">Related Posts</string>
     <string name="transition_image">detail_image</string>
+    <string name="open_music">Open Music</string>
 </resources>
