--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="enter_required_fields">Please enter required fields.</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
+    <string name="profile_pic">Profile Pic</string>
 </resources>
