Added Timeline API Added Like update API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,5 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="profile_pic">Profile Pic</string>
+    <string name="timeline_post">Timeline Post</string>
 </resources>
